--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle: # site tagline that appears below site title in masthead
 name: "Nadim-Daniel"
 description: "A human being's journal."
 url: https://journal.osoyalce.com/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: # the subpath of your site, e.g. "/blog"
+baseurl: "/" # the subpath of your site, e.g. "/blog"
 repository: NadimGhaznavi/journal # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: /images/banner.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
