--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: https://journal.osoyalce.com/ # the base hostname & protocol for your site 
 baseurl: "/" # the subpath of your site, e.g. "/blog"
 repository: NadimGhaznavi/journal # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo: /images/banner.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo: "/images/bear_and_moose.png" # /images/banner.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs: # true, false (default)
 words_per_minute: 200
@@ -112,30 +112,30 @@ analytics:
 
 # Site Author
 author:
-  name: "Your Name"
+  name: "Nadim-Daniel"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "I am an **amazing** person."
-  location: "Somewhere"
-  email:
+  bio: "Human Bean."
+  location: "Hamilton, ON"
+  email: "nghaznavi@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      url: "mailto:nghaznavi@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://www.osoyalce.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://x.com/NadimDGhaznavi"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://www.facebook.com/nadim.ghaznavi"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/NadimGhaznavi/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.instagram.com/nadimghaznavi/"
 
 # Site Footer
 footer:
