--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@ remote_theme: "mmistakes/minimal-mistakes"
 
 # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 #minimal_mistakes_skin: "neon"
-#minimal_mistakes_skin: "sunrise"
+minimal_mistakes_skin: "sunrise"
 #minimal_mistakes_skin: "air"
-minimal_mistakes_skin: "dirt"
 
 # Site Settings
 locale: "en-US"
