--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@
 remote_theme: "mmistakes/minimal-mistakes"
 
 # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-#minimal_mistakes_skin: "neon"
-minimal_mistakes_skin: "sunrise"
+minimal_mistakes_skin: "neon"
+#minimal_mistakes_skin: "sunrise"
 #minimal_mistakes_skin: "air"
 
 # Site Settings
